--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,186 @@
+/* Design decision
+Colors 
+  Primary 
+    Light red: hsl(0, 100%, 67%)
+    Orangey yellow: hsl(39, 100%, 56%)
+    Green teal: hsl(166, 100%, 37%)
+    Cobalt blue: hsl(234, 85%, 45%) 
+
+  Gradients 
+    Light slate blue (background): hsl(252, 100%, 67%)
+    Light royal blue (background): hsl(241, 81%, 54%)
+    Violet blue (circle): hsla(256, 72%, 46%, 1)
+    Persian blue (circle): hsla(241, 72%, 46%, 0) 
+
+  Neutral 
+    White: hsl(0, 0%, 100%)
+    Pale blue: hsl(221, 100%, 96%)
+    Light lavender: hsl(241, 100%, 89%)
+    Dark gray blue: hsl(224, 30%, 27%) 
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   line-height: 1;
-  font-weight: 400;
+  font-family: "Hanken Grotesk", sans-serif;
+  font-weight: 500;
   color: #555;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  margin: 0;
+  margin: 0 auto;
   height: 100vh;
+  width: 60vw;
 }
 
 strong {
   font-weight: 500;
 }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  border-radius: 25px;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
+  width: 85%;
+  margin: 0 auto;
+}
+
+.box-heading {
+  font-size: 2rem;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 2rem 2rem 3rem 2rem;
+  gap: 2rem;
+}
+
+.results-box {
+  align-items: center;
+  background: linear-gradient(hsl(252,100%, 67%), hsl(241, 81%, 54%));
+  border-radius: 25px;
+  color: hsl(241, 100%, 89%);
+}
+
+.result-circle {
+  width: 22rem;
+  height: 22rem;
+  border-radius: 50%;
+  background: linear-gradient(hsla(256,72%, 46%,1), hsla(241, 72%, 46%, 0));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+}
+
+.score-number {
+  font-size: 8rem;
+  font-weight: 800;
+  color: hsl(0, 0%, 100%);
+  display: block;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
+p.score-rating {
+  display: block;
+  font-size: 3rem;
+  font-weight: 700;
+  color: hsl(0, 0%, 100%);
+  margin: 0;
+}
+
+p.score-comment {
+  display: inline-block;
+  margin: 0;
+  padding: 0 2rem;
+  text-align: center;
+}
+
+/* SECOND BOX - SUMMARY-BOX */
+
+.summary-box {
+  font-size: 1.6rem;
+}
+
+.categories-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.category-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 9px;
+  padding: 0 1rem;
+}
+
+.category {
+  display: flex;
+  align-items:center;
+  gap: 0.2rem;
+}
+
+.category-score {
+  color: #000;
+}
+
+.category-score span {
+  font-weight: 700;
+}
+
+.button:link,
+.button:visited {
+  display: block;
+  color: hsl(0, 0%, 100%);  
+  background-color:hsl(224, 30%, 27%);
+  text-align:center;
+  text-decoration: none;
+  font-weight:700;
+  font-size: 1.8rem;
+  padding: 1.8rem;
+  border-radius: 50px;
+}
+
+/* COLORS FOR CATEGORIES */
+.category-reaction {
+  color: hsl(0, 100%, 67%);
+  background-color: hsla(0, 100%, 67%, 0.1);
+}
+
+.category-memory {
+  color: hsl(39, 100%, 56%);
+  background-color: hsla(39, 100%, 56%, 0.1);
+}
+
+.category-verbal {
+  color: hsl(166, 100%, 56%);
+  background-color: hsla(166, 100%, 56%, 0.1);
+}
+
+.category-visual {
+  color: hsl(234, 85%, 45%);
+  background-color: hsla(234, 85%, 45%, 0.1);
+}
+
+
