--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,16 @@ body {
   font-family: "Hanken Grotesk", sans-serif;
   font-weight: 500;
   color: #555;
+}
+
+.summary-section {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  margin: 0 auto;
-  height: 100vh;
-  width: 60vw;
 }
 
 strong {
@@ -54,8 +56,7 @@ strong {
   gap: 2rem;
   border-radius: 25px;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
-  width: 85%;
-  margin: 0 auto;
+  margin: 0 22rem;
 }
 
 .box-heading {
@@ -138,15 +139,16 @@ p.score-comment {
 .category {
   display: flex;
   align-items:center;
-  gap: 0.2rem;
+  gap: 1rem;
 }
 
 .category-score {
-  color: #000;
+  color: #666;
 }
 
 .category-score span {
   font-weight: 700;
+  color: #333;
 }
 
 .button:link,
